2005-06-07 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/nunit-gtk.schema:
	* src/main.cs:
	* src/nunit-gtk.glade:
	* src/AssemblyStore.cs:
	* src/Settings.cs: added support for categories, display the number of
	assertions made, workaround 'Stop' as thread.Abort wasn't doing very
	well.

2005-05-08  Ben Maurer  <bmaurer@ximian.com>

	* src/Makefile.am, script*.in: use @RUNTIME@ rather than
	@bin_dir@/mono. This is a problem for people who have mono-tools
	and mono in a different prefix (say you install mono from rpm but
	want to hack on monodoc).

2005-04-23  Mike Kestner  <mkestner@novell.com>

	* src/Makefile.am : distcheck fixes.

2005-01-23  Ben Maurer  <bmaurer@ximian.com>

	* src/gnunit2.exe.config: Config file for 2.0

	* src/Makefile.am: Do this the right way.

	* configure.in: Remove 2.0 hackishness

2004-12-27  Ben Maurer  <bmaurer@ximian.com>

	* configure.in: 2.0 happyness

	* src/Makefile.am: Create gnunit2 for 2.0 apis. Make everything
	follow the mono conventions now.

2004-08-05  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* src/main.cs: Implement translator credits the proper way.
	* src/.cvsignore: Added catalog.cs

2004-05-29  Jordi Mas <jordi@ximian.com>

	* configure.in: added Catalan po processing

2004-05-29  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* configure.in: added catalog.cs to the output.	

	* src/Makefile.am: use catalog.cs.in instead of catalog.cs.
	* src/catalog.cs: Removed file.
	* src/catalog.cs.in: added InitCatalog. It sets the directory to the one
	where the .mo files are installed, not the default one, which might
	be different.

	* src/main.cs: commented out the Log stuff. It crashes.

2004-05-28  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* autogen.sh: Swapped automake and aclocal to prevent 
	error msgs on the first run of autogen.sh
	* autogen.sh: I18N 
	* configure.in: Ditto
	* Makefile.am: Ditto
	* mkinstalldirs: Ditto (Workaround for automake-1.8.x)
	* .cvsignore: Ditto
	* po/ChangeLog: Ditto